# DirectX12FromScratch

./: .gitignore  CompileShaders.bat  DirectX12FromScratch.cap  DirectX12FromScratch.sln  External.lua  GeometryGenerator.h  README.md  imgui.ini  premake5.lua
Assets/Models/: cube.mtl  texture_bunny.mtl
Assets/Shaders/: 5.Cubemap.hlsl  5.Skybox.hlsl  7.RenderToTexture.hlsl  7.RenderToTexturePS.dxil  7.RenderToTextureVS.dxil  7.Skybox.hlsl  7.SkyboxPS.dxil  7.SkyboxVS.dxil  LandAndOcean.hlsl  LightingUtil.hlsl  Texture.hlsl  TreeSprite.hlsl
Assets/Textures/: Tree01.dds  Tree02.dds  Tree03.dds  treearray.dds
DirectX12FromScratch/Src/: 2.TexturedQuad.cpp  3.D3DApp.cpp  3.TexturedCube.cpp  3.TexturedCube.md  4.D3DApp.cpp  4.D3DApp.h  4.TexturedCube.cpp  5.Cubemap.md  5.D3DApp.cpp  5.D3DApp.h  Chapter1.Triangle.cpp  Chapter2.D3DApp.cpp  Chapter2.D3DApp.h  Chapter2.TexturedQuad.cpp  Chapter2.TexturedQuad.md  Chapter3.D3DApp.h  Chapter4.D3DApp.cpp  Chapter4.D3DApp.h  Chapter4.TexturedCube.cpp  Console.h  D3DApp.cpp  D3DApp.h  GeometryGenerator.h  Model.cpp  Model.h  Utils.h  WICImage.cpp  WICImage.h
Playground/1-D3D12Triangle/: 1-D3D12Triangle.cpp  1-D3D12Triangle.vcxproj  1-D3D12Triangle.vcxproj.filters  CMakeLists.txt  PlainDirectX12.rc  Resource.h
Playground/2-D3D12WICTexture/: 2-D3D12WICTexture.cpp  2-D3D12WICTexture.rc  2-D3D12WICTexture.vcxproj  2-D3D12WICTexture.vcxproj.filters  CMakeLists.txt  Resource.h
Playground/2-D3D12WICTexture/Shader/: Texture.hlsl
Playground/3-PlacedTexture/: 3-PlacedTexture.cpp  3-PlacedTexture.rc  3-PlacedTexture.vcxproj  3-PlacedTexture.vcxproj.filters  CMakeLists.txt  Resource.h
Playground/4-D3D12TextureCube/: 4-D3D12TextureCube.cpp  4-D3D12TextureCube.rc  4-D3D12TextureCube.vcxproj  4-D3D12TextureCube.vcxproj.filters  CMakeLists.txt  Resource.h
Playground/4-D3D12TextureCube/Shader/: Texture.hlsl
Playground/9-D3D12RenderToTexture/: 9-RenderToTexture.cpp
Playground/9-D3D12RenderToTexture/Shader/: TextureCube.hlsl
Playground/Common/: Camera.h  GeometryGenerator.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
Playground/D3D12TextureCube/: CMakeLists.txt  D3D12TextureCube.aps  D3D12TextureCube.cpp  D3D12TextureCube.rc  D3D12TextureCube.vcxproj  D3D12TextureCube.vcxproj.filters
Playground/D3D12TextureCube/Shader/: compile.bat  textureCube_PS.dxil  textureCube_VS.dxil
Playground/D3D12WICTexture/: D3D12WICTexture.cpp  D3D12WICTexture.vcxproj
Playground/D3D12WICTexture/Shader/: texture.hlsl
Playground/InitDirect3D/: InitDirect3D.cpp  InitDirect3D.rc  InitDirect3D.vcxproj  InitDirect3D.vcxproj.filters  Resource.h
Playground/RenderToTexture/: RenderToTexture.cpp  RenderToTexture.vcxproj
Playground/RenderToTexture/Shader/: compile.bat  quad.hlsl  quad_PS.dxil  quad_VS.dxil  skybox.hlsl  skybox_PS.dxil  skybox_VS.dxil  textureCube.hlsl  textureCubeDxc.hlsl  textureCubeDxc_PS.dxil  textureCubeDxc_VS.dxil
Playground/RenderToTextureBindless/: RenderToTexture.rc  RenderToTextureBindless.cpp  RenderToTextureBindless.vcxproj  RenderToTextureBindless.vcxproj.filters
Playground/RenderToTextureBindless/Shader/: compile.bat  quad.hlsl  quad_PS.dxil  quad_VS.dxil  skybox.hlsl  skybox_PS.dxil  skybox_VS.dxil  textureCubeDxc.hlsl  textureCubeDxc_PS.dxil  textureCubeDxc_VS.dxil
Playground/SkyBox/: SkyBox.cpp  SkyBox.rc  SkyBox.vcxproj
Playground/SkyBox/Shader/: skybox.hlsl  textureCubeDxc.hlsl
Project/: DirectX12FromScratch.vcxproj  DirectX12FromScratch.vcxproj.filters  ImGui.vcxproj
Src/: 5.Cubemap.cpp  5.D3DApp.cpp  5.D3DApp.h  6.D3DApp.cpp  6.D3DApp.h  6.MultithreadRendering.cpp  6.MultithreadRendering.md  7.D3DApp.cpp  7.D3DApp.h  7.D3DAppGLFW.cpp  7.D3DAppGLFW.h  7.RenderToTexture.cpp  7.RenderToTexture.md  Camera.h  Chapter2.D3DApp.cpp  Chapter2.D3DApp.h  Chapter3.D3DApp.cpp  Chapter3.D3DApp.h  Chapter3.TexturedQuadAdvance.md  Chapter4.D3DApp.cpp  Chapter4.D3DApp.h  Chapter5.D3DApp.cpp  Chapter5.D3DApp.h  Chapter6.D3DApp.cpp  Chapter6.D3DApp.h  Chapter6.MultithreadRendering.cpp  Chapter7.D3DApp.cpp  Chapter7.D3DApp.h  Console.h  D3D12Slim.h  DDSTextureLoader12.cpp  DirectX12FromScratch.rc  FrameResource.cpp  FrameResource.h  GeometryGenerator.cpp  GeometryGenerator.h  ImGuiLayer.cpp  ImGuiLayer.h  LandAndOcean.cpp  MathHelper.cpp  (+11 more)
Src/ImGui/: ImGuiBuild.cpp
